# Doom3BFG

./: readme.md
base/def/: info.def  map_delta2a.def  misc.def  monster_zombie_commando.def  ss_sawyer.def  test_export.def  weapon_handgrenade.def  weapon_machinegun.def  weapon_pistol.def  weapon_plasmagun.def  weapon_shotgun.def  weapon_shotgun_double.def  zombie_follower.def
base/fonts/Arial/: 48.tga
base/maps/testmaps/: test_box.cm  test_box.map  test_box.proc  test_boxstack.aas48  test_boxstack.cm  test_boxstack.map  test_boxstack.proc  test_lotsaimps.aas48  test_lotsaimps.aas96  test_lotsaimps.cm  test_lotsaimps.map  test_lotsaimps.proc
base/script/: ai_base.script  ai_character_sentry.script  ai_follower.script  ai_monster_base.script  ai_monster_boss_vagary.script  ai_monster_demon_hellknight.script  ai_monster_demon_imp.script  ai_monster_demon_trite.script  ai_monster_flying_cacodemon.script  ai_monster_flying_lostsoul.script  ai_monster_hunter_berserk.script  ai_monster_turret.script  ai_monster_zombie.script  ai_monster_zombie_bernie.script  ai_monster_zombie_commando_cgun.script  ai_monster_zombie_commando_tentacle.script  ai_monster_zombie_morgue.script  ai_monster_zombie_security_pistol.script  doom_events.script  doom_main.script
base/snapmaps/: testmap.snapmap
base/snapmaps/templates/: test001.map
base/textures/: default_lit.tga  default_lit_normal.tga  default_lit_spec.tga
doomclassic/: doomclassic.vcxproj
doomclassic/doom/: d_main.cpp  d_net.cpp  f_finale.cpp  g_game.cpp  m_menu.cpp  m_misc.cpp  p_inter.cpp  p_pspr.cpp  p_spec.cpp  wi_stuff.cpp
doomclassic/timidity/: timidity.vcxproj
neo/: CMakeLists.txt  Engine.vcxproj  astyle-code.bat  doom3.sln  doomexe.vcxproj  external.vcxproj  game-d3xp.vcxproj  game-d3xp.vcxproj.filters  idlib.vcxproj  typeinfo.vcxproj  typeinfo.vcxproj.filters
neo/aas/: AASFile.cpp  AASFile.h  AASFile_local.h  AASFile_optimize.cpp  AASFile_sample.cpp
neo/amplitude/: amplitude.vcxproj
neo/cm/: CollisionModel.h  CollisionModel_load.cpp  CollisionModel_local.h
neo/d3xp/: AFEntity.cpp  Actor.cpp  Actor.h  Entity.cpp  Entity.h  Game_local.cpp  Game_local.h  Game_network.cpp  Item.cpp  Item.h  Light.cpp  Light.h  Misc.h  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerView.h  Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h  precompiled.h
neo/d3xp/ai/: AAS.cpp  AAS.h  AASCallback_AvoidLocation.cpp  AASCallback_FindAreaOutOfRange.cpp  AASCallback_FindCoverArea.cpp  AAS_debug.cpp  AAS_local.h  AAS_routing.cpp  AI.cpp  AI.h  AI_Vagary.cpp  AI_events.cpp  AI_follower.cpp  AI_move.cpp  AI_pathing.cpp  AI_states.cpp  AI_states_combat.cpp  AI_states_util.cpp  Monster_base.cpp  Monster_base.h  Monster_boss_vagary.h  Monster_demon_hellknight.cpp  Monster_demon_hellknight.h  Monster_demon_imp.cpp  Monster_demon_imp.h  Monster_flying_cacodemon.h  Monster_flying_lostsoul.cpp  Monster_flying_lostsoul.h  Monster_zombie.cpp  Monster_zombie.h  Monster_zombie_bernie.cpp  Monster_zombie_commando_cgun.cpp  Monster_zombie_commando_tentacle.cpp  Monster_zombie_sawyer.h  ObstacleAvoidance.cpp  (+2 more)
neo/framework/: CmdSystem.h  Common.cpp  Console.cpp  Licensee.h  Zip.h
neo/idlib/: CMakeLists.txt  Lexer.h  Lib.cpp  MapFile.cpp  Parser.cpp  Parser.h  SoftwareCache.cpp  Str.cpp  Str.h  precompiled.h
neo/renderer/: BufferObject.h  Font.cpp  Image_intrinsic.cpp  Interaction.cpp  Material.h  Model.cpp  Model.h  ModelManager.cpp  Model_liquid.cpp  Model_local.h  Model_md5.cpp  Model_obj.cpp  Model_obj.h  RenderBackend.cpp  RenderCommon.h  RenderProgs.cpp  RenderProgs.h  RenderSystem_init.cpp  RenderWorld_defs.cpp  RenderWorld_load.cpp  tr_frontend_addlights.cpp  tr_frontend_addmodels.cpp  tr_trisurf.cpp
neo/sys/: sys_voicechat.cpp
neo/typeinfo/: CMakeLists.txt  EngineStub.cpp  TypeInfoGen.cpp  TypeInfoGen.h  main.cpp
(+123 files in other folders)
